# power-fair-value

./: .env.example  .gitignore  Makefile  README.md  REPORT.md  pyproject.toml  requirements.lock.txt  requirements.txt  submission.csv
.github/workflows/: ci.yml
config/: config.yaml
docs/logbook/: day1.md  day2.md  day3.md  day4.md
reports/: qa_report.json  qa_report.md
samples/: outage_news.txt
scripts/: run_pipeline.py
src/power_fv/: analysis.py  config.py  features.py  ingest.py  llm.py  models.py  plots.py  qa.py  trade.py  validate.py
tests/: test_analysis.py  test_features.py  test_llm.py  test_model.py  test_qa.py  test_smoke.py  test_trade.py  test_validate.py
