[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
 
[project]
name = "power_fv"
version = "0.1.0"
requires-python = ">=3.11"
 
[tool.setuptools.packages.find]
where = ["src"]
 
[tool.ruff]
line-length = 100
target-version = "py311"
 
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
 
[tool.black]
line-length = 100
 
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]